deploy/prod/deploy_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauthserver-deployment
  labels:
    app: oauthserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oauthserver
  template:
    metadata:
      labels:
        app: oauthserver
    spec:
      containers:
        - name: oauthserver
          image: omicron.azurecr.io/omicronprod/omicron-appiosformulas-oauthserver-repository:latest
          ports:
            - containerPort: 8090
          resources:
            limits:
              cpu: 500m
              memory: 900Mi
            requests:
              cpu: 300m
              memory: 630Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: oauthserver-svc
  labels:
    app: oauthserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8090
  selector:
    app: oauthserver
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogos-deployment
  labels:
    app: catalogos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogos
  template:
    metadata:
      labels:
        app: catalogos
    spec:
      containers:
        - name: catalogos
          image: omicron.azurecr.io/omicronprod/omicron-appiosformulas-catalogos-repository:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 220m
              memory: 210Mi
            requests:
              cpu: 154m
              memory: 147Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: catalogos-svc
  labels:
    app: catalogos
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: catalogos
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-deployment
  labels:
    app: usuarios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: omicron.azurecr.io/omicronprod/omicron-appiosformulas-usuarios-repository:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 215m
              memory: 370Mi
            requests:
              cpu: 151m
              memory: 259Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios-svc
  labels:
    app: usuarios
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: usuarios
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapadapter-deployment
  labels:
    app: sapadapter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sapadapter
  template:
    metadata:
      labels:
        app: sapadapter
    spec:
      containers:
        - name: sapadapter
          image: omicron.azurecr.io/omicronprod/omicron-appiosformulas-sapadapter-repository:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 350m
              memory: 350Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: sapadapter-svc
  labels:
    app: sapadapter
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: sapadapter
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-deployment
  labels:
    app: pedidos
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pedidos
  template:
    metadata:
      labels:
        app: pedidos
    spec:
      containers:
        - name: pedidos
          image: omicron.azurecr.io/omicronprod/omicron-appiosformulas-pedidos-repository:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 150m
              memory: 1000Mi
            requests:
              cpu: 105m
              memory: 700Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos-svc
  labels:
    app: pedidos
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pedidos
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouses-deployment
  labels:
    app: warehouses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouses
  template:
    metadata:
      labels:
        app: warehouses
    spec:
      containers:
        - name: warehouses
          image: omicron.azurecr.io/omicronprod/omicron-appiosformulas-warehouses-repository:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 135m
              memory: 135Mi
            requests:
              cpu: 95m
              memory: 95Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: warehouses-svc
  labels:
    app: warehouses
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: warehouses
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-deployment
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      containers:
        - name: reporting
          image: omicron.azurecr.io/omicronprod/omicron-appiosformulas-reporting-repository:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 180Mi
            requests:
              cpu: 70m
              memory: 126Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-svc
  labels:
    app: reporting
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: reporting
  type: ClusterIP
---
