deploy/prod/ingress-oauth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-oauthserver
  annotations:
    kubernetes.io/ingress.class: nginx-api
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  tls:
  - hosts:
    - magistralesprod.omicronlab.com.mx
    secretName: secure-tls-prod-2022
  rules:
    - host: magistralesprod.omicronlab.com.mx
      http:
        paths:
          - backend:
              service:
                name: oauthserver-svc
                port:
                  number: 80
            path: /api/oauth(/|$)(.*)
            pathType: Prefix
